--- a/app/src/main/res/layout/activity_draw.xml
+++ b/app/src/main/res/layout/activity_draw.xml
@@ -44,15 +44,15 @@
                 android:src="@drawable/round_redo_24" />
 
             <ImageView
-                android:id="@+id/iv_tool_and_color"
+                android:id="@+id/iv_color_and_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:padding="5dp"
-                android:src="@drawable/round_brush_24" />
+                android:src="@drawable/baseline_palette_24" />
 
             <ImageView
-                android:id="@+id/iv_eraser"
+                android:id="@+id/iv_tool"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
