--- a/app/src/main/res/layout/activity_draw.xml
+++ b/app/src/main/res/layout/activity_draw.xml
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:padding="5dp"
-                android:src="@drawable/eraser_variant" />
+                android:src="@drawable/ic_eraser_24" />
 
             <ImageView
                 android:id="@+id/iv_close_menu"
