--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,18 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
+    <color name="red">#FD0202</color>
+    <color name="orange">#FF5722</color>
+    <color name="yellow">#FFC107</color>
+    <color name="green">#8BC34A</color>
+    <color name="blue">#2196F3</color>
+    <color name="navy">#3F51B5</color>
+    <color name="purple">#673AB7</color>
+    <color name="gray">#666666</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00000000</color>
 
     <color name="col_D1CDCD">#D1CDCD</color>
 </resources>
