--- a/app/src/main/res/drawable/ic_highlighter_36.xml
+++ b/app/src/main/res/drawable/ic_highlighter_36.xml
@@ -1,6 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="36dp"
+    android:height="36dp"
     android:viewportWidth="544"
     android:viewportHeight="544">
     <path
