--- a/app/src/main/res/layout/dialog_theme.xml
+++ b/app/src/main/res/layout/dialog_theme.xml
@@ -1,182 +1,214 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/bg_trans_white"
+    android:theme="@style/Theme.Transparent">
 
     <LinearLayout
-        android:layout_width="200dp"
-        android:layout_height="280dp"
-        android:orientation="vertical"
-        android:padding="15dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/tool" />
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_rectangle_gray"
+            android:padding="5dp"
+            android:text="@string/tool"
+            android:textColor="@color/gray"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:orientation="horizontal">
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="10dp">
 
             <ImageView
                 android:id="@+id/iv_pencil"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:src="@drawable/round_pencil_24" />
+                android:src="@drawable/round_pencil_36"
+                android:background="@drawable/bg_rectangle_white_blue_line"/>
 
             <ImageView
                 android:id="@+id/iv_brush"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:src="@drawable/round_brush_24" />
+                android:src="@drawable/round_brush_36" />
 
             <ImageView
                 android:id="@+id/iv_highlighter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:src="@drawable/ic_highlighter_24" />
+                android:src="@drawable/ic_highlighter_36" />
 
             <ImageView
                 android:id="@+id/iv_spray"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:src="@drawable/ic_spray_24" />
+                android:src="@drawable/ic_spray_36" />
 
             <ImageView
                 android:id="@+id/iv_eraser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:src="@drawable/ic_eraser_24" />
+                android:src="@drawable/ic_eraser_36" />
 
         </LinearLayout>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/color" />
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/iv_red"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:src="@drawable/round_red_unclicked" />
-
-            <ImageView
-                android:id="@+id/iv_orange"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:src="@drawable/round_orange_unclicked" />
-
-            <ImageView
-                android:id="@+id/iv_yellow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:src="@drawable/round_yellow_unclicked" />
-
-            <ImageView
-                android:id="@+id/iv_green"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:src="@drawable/round_green_unclicked" />
-
-            <ImageView
-                android:id="@+id/iv_blue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:src="@drawable/round_blue_unclicked" />
-
-        </LinearLayout>
+            android:background="@drawable/bg_rectangle_gray"
+            android:padding="5dp"
+            android:text="@string/color"
+            android:textColor="@color/gray"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/iv_navy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:src="@drawable/round_navy_unclicked" />
-
-            <ImageView
-                android:id="@+id/iv_purple"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:src="@drawable/round_purple_unclicked" />
-
-            <ImageView
-                android:id="@+id/iv_gray"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:src="@drawable/round_gray_unclicked" />
-
-            <ImageView
-                android:id="@+id/iv_black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:src="@drawable/round_black_unclicked" />
-
-            <ImageView
-                android:id="@+id/iv_white"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:src="@drawable/round_whilte_unclicked" />
-
-        </LinearLayout>
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/size" />
+            android:orientation="vertical"
+            android:padding="10dp">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center">
-
-            <FrameLayout
-                android:id="@+id/frame_preview"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/iv_red"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:src="@drawable/round_transparent_36" />
+                    android:padding="5dp"
+                    android:src="@drawable/round_red_clicked" />
 
-            </FrameLayout>
+                <ImageView
+                    android:id="@+id/iv_orange"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:src="@drawable/round_orange_unclicked" />
 
-            <SeekBar
-                android:layout_width="match_parent"
+                <ImageView
+                    android:id="@+id/iv_yellow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:src="@drawable/round_yellow_unclicked" />
+
+                <ImageView
+                    android:id="@+id/iv_green"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:src="@drawable/round_green_unclicked" />
+
+                <ImageView
+                    android:id="@+id/iv_blue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:src="@drawable/round_blue_unclicked" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:foregroundGravity="center"
-                android:layout_centerInParent="true"
-                android:layout_toRightOf="@id/frame_preview"/>
+                android:layout_marginBottom="5dp"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/iv_navy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:src="@drawable/round_navy_unclicked" />
+
+                <ImageView
+                    android:id="@+id/iv_purple"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:src="@drawable/round_purple_unclicked" />
+
+                <ImageView
+                    android:id="@+id/iv_gray"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:src="@drawable/round_gray_unclicked" />
+
+                <ImageView
+                    android:id="@+id/iv_black"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:src="@drawable/round_black_unclicked" />
+
+                <ImageView
+                    android:id="@+id/iv_white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:src="@drawable/round_whilte_unclicked" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_rectangle_gray"
+            android:padding="5dp"
+            android:text="@string/size"
+            android:textColor="@color/gray"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp">
+
+                <FrameLayout
+                    android:id="@+id/frame_preview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:src="@drawable/round_transparent_36" />
+
+                </FrameLayout>
+
+                <SeekBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_toRightOf="@id/frame_preview"
+                    android:foregroundGravity="center" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -194,7 +226,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="@string/apply"/>
+                android:text="@string/apply" />
 
         </LinearLayout>
 
