--- a/app/src/main/res/layout/dialog_theme.xml
+++ b/app/src/main/res/layout/dialog_theme.xml
@@ -192,10 +192,11 @@
                     android:layout_height="wrap_content">
 
                     <ImageView
+                        android:id="@+id/iv_size_preview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:src="@drawable/round_transparent_36" />
+                        android:background="@drawable/round_black_line" />
 
                 </FrameLayout>
 
@@ -211,6 +212,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
