--- a/app/src/main/res/layout/dialog_theme.xml
+++ b/app/src/main/res/layout/dialog_theme.xml
@@ -201,6 +201,7 @@
                 </FrameLayout>
 
                 <SeekBar
+                    android:id="@+id/seekbar_size"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
