--- a/app/src/main/res/layout/dialog_theme.xml
+++ b/app/src/main/res/layout/dialog_theme.xml
@@ -196,7 +196,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:background="@drawable/round_black_line" />
+                        android:src="@drawable/round_black_line" />
 
                 </FrameLayout>
 
