--- a/app/src/main/res/layout/dialog_theme.xml
+++ b/app/src/main/res/layout/dialog_theme.xml
@@ -188,13 +188,15 @@
 
                 <FrameLayout
                     android:id="@+id/frame_preview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/bg_rectangle_gray">
 
                     <ImageView
                         android:id="@+id/iv_size_preview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:padding="10dp"
                         android:src="@drawable/round_black_line" />
 
