--- a/app/src/main/res/layout/dialog_theme.xml
+++ b/app/src/main/res/layout/dialog_theme.xml
@@ -64,6 +64,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tv_color"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_rectangle_gray"
@@ -72,6 +73,7 @@
             android:textColor="@color/gray"/>
 
         <LinearLayout
+            android:id="@+id/linear_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
