--- a/app/src/main/res/layout/dialog_theme.xml
+++ b/app/src/main/res/layout/dialog_theme.xml
@@ -9,6 +9,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/iv_close_dialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_close_gray_20"
