--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,17 @@
     <color name="white">#FFFFFF</color>
     <color name="transparent">#00000000</color>
 
+    <color name="translucent_red">#4DFD0202</color>
+    <color name="translucent_orange">#4DFF5722</color>
+    <color name="translucent_yellow">#4DFFC107</color>
+    <color name="translucent_green">#4D8BC34A</color>
+    <color name="translucent_blue">#4D2196F3</color>
+    <color name="translucent_navy">#4D3F51B5</color>
+    <color name="translucent_purple">#40673AB7</color>
+    <color name="translucent_gray">#40666666</color>
+    <color name="translucent_black">#40000000</color>
+    <color name="translucent_white">#40FFFFFF</color>
+
     <color name="black_trans_80">#CC2E2D2D</color>
     <color name="f4f3f3_tans_70">#B3F4F3F3</color>
     <color name="dfdddd_tans_70">#B3EAE9E9</color>
